syntax = "proto3";

option java_package= "grpc.pwc";

message HelloRequest {
  string message = 1;
}

message HelloResponse {
  string message = 1;
}


service hello {
  rpc getHello(HelloRequest) returns (HelloResponse) {}
}

